# brain-wave-analyzer

./: .coveragerc  .gitignore  LICENSE  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  hello.py  pyproject.toml  requirements-backend.txt  requirements-frontend.txt  run_tests.bat
src/: backend.py  frontend.py
tests/backend/: test_backend.py
