[project]
name = "brain-wave-analyzer"
version = "0.1.0"
description = "A complete application w. frontend and backend that analyzes and visualizes brainwaves."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "mne>=1.10.1",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
    "ruff>=0.12.11",
]
